--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 		<meta name="viewport" id="viewport" content="width=device-width,initial-scale=1"/>
 		<title>learn-d3</title>
-		<script src="https://npmcdn.com/angular2/bundles/angular2-polyfills.js"></script>
-		<script src="https://npmcdn.com/systemjs/dist/system.src.js"></script>
+		<script src="https://npmcdn.com/angular2@2.0.0-beta.1/bundles/angular2-polyfills.js"></script>
+		<script src="https://npmcdn.com/systemjs@0.18.4/dist/system.src.js"></script>
 		<script src="config.js"></script>
 		<script src="dist/vendor.js"></script>
 		<script src="dist/app.js"></script>
