--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<script src="https://npmcdn.com/systemjs@0.18.4/dist/system.src.js"></script>
 		<script src="config.js"></script>
 		<script src="dist/vendor.js"></script>
-		<script src="dist/app.js"></script>
+		<!--<script src="dist/app.js"></script>-->
 		<link rel="stylesheet" href="dist/vendor.css"/>
 		<!--<link rel="stylesheet" href="dist/app.css"/>-->
 	</head>
